force-app/main/default/objects/EYI_Panchshil_Master__c/EYI_Panchshil_Master__c.object-meta.xml
<CustomObject>
    <label>Panchshil Master</label>
    <nameField>
        <displayFormat>Master-{0000000000}</displayFormat>
        <label>Master Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panchshil Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>