force-app/main/default/objects/EYI_Panchshil_Master__c/fields/EYI_Locality__c.field-meta.xml
<CustomField>
    <fullName>EYI_Locality__c</fullName>
    <label>Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>