force-app/main/default/objects/EYI_Panchshil_Master__c/fields/EYI_State__c.field-meta.xml
<CustomField>
    <fullName>EYI_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>