force-app/main/default/objects/EYI_Panchshil_Master__c/fields/EYI_Sub_Urb__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sub_Urb__c</fullName>
    <label>Sub Urb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>