force-app/main/default/objects/EYI_Panchshil_Master__c/fields/EYI_Zone__c.field-meta.xml
<CustomField>
    <fullName>EYI_Zone__c</fullName>
    <label>Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>