force-app/main/default/objects/EYI_Panchshil_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Pincode__c</columns>
    <columns>EYI_Locality__c</columns>
    <columns>EYI_State_Formula__c</columns>
    <columns>EYI_State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>